fixed overflow issue on mobile

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,7 @@
-body {
+html, body {
   margin: 0;
   font-family: 'Orbitron', sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
